# third_obs

./: .gitignore  CMakeLists.txt  build.sh  build_x86.sh
demos/: CMakeLists.txt  test1.cpp
demos/config/: camera.yaml
include/: camera_model.hh  softrender_point.hh  third_obs.hh
matlab/: ObserverTarget.m
softrender_point/: CMakeLists.txt  camera_model.cpp  softrender_point.cpp
third_obs/: CMakeLists.txt  third_obs.cpp
